# makeParallel

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  README.md  README_UPDATES.md  UPDATE_SUMMARY.md  WHATS_NEW.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  release.yml
benchmarks/: benchmark_parallel.py
docs/: AUDIT_SUMMARY.md  BUGFIX_IMPLEMENTATION_REPORT.md  BUGFIX_REPORT_PROGRESS.md  CALLBACKS_AND_DEPENDENCIES.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CRITICAL_BUGFIXES.md  FEATURE_COMPLETION_REPORT.md  FOCUSED_LIBRARY_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENT_SUGGESTIONS.md  NEW_FEATURES.md  NEW_FEATURES_SUMMARY.md  OPTIMIZATION_GUIDE.md  PARALLELISM_PROOF.md  PRACTICAL_IMPROVEMENTS.md  QUICK_REFERENCE.md  QUICK_WINS.md  README_PARALLEL.md  ROADMAP.md  RUST_TESTS.md  TEST_SUMMARY.md  THREADING_BEST_PRACTICES.md  VERSION_MANAGEMENT.md
examples/: basic_test.py  benchmark_optimizations.py  comparison_multiprocessing.py  example_progress.py  prove_true_parallelism.py  quick_test_features.py  showcase_all_features.py  test_error_and_shutdown.py  test_new_features.py  test_simple_features.py  visual_parallelism_proof.py
src/: lib.rs
src/types/: errors.rs  mod.rs
tests/: rust_unit_tests.rs  test_advanced_features.py  test_all.py  test_callbacks_and_dependencies.py  test_decorators.py  test_minimal.py  test_parallel.py  test_parallel_simple.py  test_progress_fix.py  test_simple_callbacks.py  test_simple_dependencies.py
