[package]
name = "makeParallel"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "makeParallel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
crossbeam = "0.8"
rayon = "1.10"
dashmap = "6.1"
once_cell = "1.20"
