[package]
name = "makeparallel"
version = "0.1.1"
edition = "2021"
authors = ["Amiya Mandal <amiya19mandal@gmail.com>"]
description = "True parallelism for Python - Bypass the GIL with Rust-powered decorators"
repository = "https://github.com/amiyamandal-dev/makeParallel"
license = "MIT"
keywords = ["python", "parallel", "gil", "concurrency", "rust"]
categories = ["api-bindings", "concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "makeparallel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
crossbeam = "0.8"
rayon = "1.10"
dashmap = "6.1"
once_cell = "1.20"
parking_lot = "0.12"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
